# ComfyUI-PoseDirection

./: README.md  custom_node.py  pyproject.toml
.github/workflows/: publish.yml
workflow/: test_detection.json
